# SimplePlatformer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
assets/levels/: level_01.ron  level_02.ron  level_03.ron  level_04.ron  level_05.ron
docs/: DEVELOPMENT_PLAN.md  LEVEL_CREATION_GUIDE.md
docs/plans/: 2026-02-23-ci-release-design.md  2026-02-23-ci-release-implementation.md  2026-02-23-platformer-design.md  2026-02-23-platformer-implementation.md  2026-02-23-polish-design.md  2026-02-23-polish-implementation.md  2026-02-23-polish2-design.md  2026-02-23-polish2-implementation.md  2026-02-23-polish3-design.md  2026-02-23-polish3-implementation.md  2026-02-23-polish4-design.md  2026-02-23-polish4-implementation.md  2026-02-24-v0.2.0-design.md  2026-02-24-v0.2.0-implementation.md
docs/polish_work/: PROBLEMS.md
src/: camera.rs  level.rs  level_select.rs  logging.rs  main.rs  menu.rs  pause.rs  physics.rs  player.rs  progress.rs  settings.rs  states.rs  victory.rs
