[package]
name = "simple_platformer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
avian2d = "0.5"
serde = { version = "1", features = ["derive"] }
ron = "0.11"
serde_json = "1"
dirs = "6"

# Быстрая компиляция в dev-режиме
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
