[package]
name = "simple_platformer"
version = "0.2.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d"] }
avian2d = "0.5"
serde = { version = "1", features = ["derive"] }
ron = "0.11"
serde_json = "1"
dirs = "6"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
tracing = "0.1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

# Быстрая компиляция в dev-режиме
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
